<resources>
    <string name="app_name">Matbit</string>
    <string name="title_activity_main">Matbit</string>
    <string name="title_activity_search">Søk</string>
    <string name="title_activity_recipe">Oppskrift</string>
    <string name="title_try_luck">Prøv lykken</string>
    <string name="title_add_recipe">Opprett</string>
    <string name="title_search">Søk</string>
    <string name="matbit_web_client_id">711713948309-lc63eoi3j85jk2csloqb1qh4hejnj5c8.apps.googleusercontent.com</string>
    <string name="matbit_browser_key">AIzaSyD3j7AUY1LnemAfELwhRuWdrZ3kkjQT2eA</string>
    <string name="matbit_server_key">AIzaSyCqRbPLneDBcZOW6L4MSBfBGybq5vWFNBg</string>
    <string name="matbit_android_key">AIzaSyAxlcaTqHS_O-kH-NE1YP63ySnU-JN99TA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="navigation_items">
        <item>Min profil</item>
        <item>Aktivitetslogg</item>
        <item>Finn bruker</item>
        <item>Instillinger</item>
        <item>Om Matbit</item>
        <item>Logg ut</item>
    </string-array>
    <string-array name="filters">
        <item>Nyeste</item>
        <item>Mest sett</item>
        <item>Mest likt</item>
        <item>Tid</item>
        <item>Alfabetisk</item>
    </string-array>
    <string-array name="categories">
        <item>Alle</item>
        <item>Sunt</item>
        <item>Rask</item>
        <item>Familie</item>
        <item>Sjømat</item>
        <item>Høytid</item>
        <item>Bakst</item>
        <item>Snacks</item>
    </string-array>
    <string-array name="measurements">
        <item>kg</item>
        <item>g</item>
        <item>mg</item>
        <item>liter</item>
        <item>l</item>
        <item>dl</item>
        <item>ml</item>
        <item>ts</item>
        <item>ss</item>
        <item>kopp</item>
        <item>tekopp</item>
        <item>kaffekopp</item>
        <item>dusin</item>
        <item>snes</item>
        <item>boks</item>
        <item>stk</item>
        <item>pk</item>
        <item>pose</item>
        <item>eske</item>
        <item>sekk</item>
        <item>bag</item>
        <item>bunt</item>
        <item>klype</item>
        <item>knipe</item>
        <item>kryddermål</item>
        <item>lår</item>
        <item>bryst</item>
        <item>m</item>
        <item>cm</item>
        <item>skiver</item>
        <item>stilk</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="recipe_title">Title</string>
    <string name="string_anonymous">Anonym</string>
    <string name="placeholder_time">00:00</string>
    <string name="placeholder_views">0000</string>
    <string name="placeholder_rating">75%</string>
    <string name="placeholder_recipe_info">Informasjon...</string>
    <string name="string_follow">Følg</string>
    <string name="string_create_dish">Lag rett</string>
    <string name="contentDescription_recipe_photo">Recipe photo</string>
</resources>