<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="net.r3dcraft.matbit.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/icon_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="net.r3dcraft.matbit.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/icon_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="net.r3dcraft.matbit.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/icon_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
