<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_recipe_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="@color/grey_300"
        android:foreground="@drawable/shape_gradient"
        android:contentDescription="@string/contentDescription_recipe_photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/fragment_recipe_title"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:textSize="24sp"
        android:text="@string/recipe_title"
        android:gravity="bottom"
        android:textColor="@color/white"
        android:minLines="1"
        android:maxLines="2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_recipe_image" />

    <ImageView
        android:id="@+id/fragment_rating_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/icon_thumb_up_black_24dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_image"
        app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_info_view1" />

    <TextView
        android:id="@+id/fragment_recipe_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_rating"
        android:textSize="14sp"
        android:minLines="1"
        android:maxLines="1"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/fragment_rating_icon"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_image"
        app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_info_view1" />

    <ImageView
        android:id="@+id/fragment_time_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/icon_time_black_24dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintLeft_toRightOf="@+id/fragment_recipe_rating"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_image"
        app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_info_view1" />

    <TextView
        android:id="@+id/fragment_recipe_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_time"
        android:textSize="14sp"
        android:minLines="1"
        android:maxLines="1"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/fragment_time_icon"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_image"
        app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_info_view1" />

    <ImageView
        android:id="@+id/fragment_eye_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/icon_eye_black_24dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintLeft_toRightOf="@+id/fragment_recipe_time"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_image"
        app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_info_view1" />

    <TextView
        android:id="@+id/fragment_recipe_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_views"
        android:textSize="14sp"
        android:minLines="1"
        android:maxLines="1"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/fragment_eye_icon"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_image"
        app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_info_view1" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/fragment_recipe_create_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/string_create_dish"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_image"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_info_view1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fragment_recipe_user_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:src="@color/cardview_shadow_start_color"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_info_view1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_info_view2" />

    <TextView
        android:id="@+id/fragment_recipe_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_anonymous"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@+id/fragment_recipe_user_photo"
        app:layout_constraintTop_toTopOf="@+id/fragment_recipe_user_photo"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_recipe_user_photo"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/fragment_recipe_follow_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/string_follow"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_info_view1"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_info_view2" />

    <View
        android:id="@+id/fragment_recipe_info_view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey_300"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_image" />

    <View
        android:id="@+id/fragment_recipe_info_view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey_300"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_info_view1" />

    <TextView
        android:id="@+id/fragment_recipe_info"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_recipe_info"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_info_view2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"/>
</android.support.constraint.ConstraintLayout>
