<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.r3dcraft.matbit.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/activity_main_swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_content_bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    <!-- NewsFeed list -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_main_content_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey_300"
        />
    </android.support.v4.widget.SwipeRefreshLayout>

    <!-- Bottom navigation menu -->
    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/activity_main_content_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:elevation="@dimen/bottom_navigation_elevation"
        android:orientation="horizontal"
        android:background="?android:attr/windowBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Random recipe button -->
        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/activity_main_bottom_navigation_view_random_recipe"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/icon_star_border_black_24dp"
                app:tint="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/title_try_luck"
                android:textColor="@color/colorPrimary"
                android:minLines="1"
                android:maxLines="1"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <!-- Add recipe button -->
        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/activity_main_bottom_navigation_view_add_recipe"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/icon_add"
                app:tint="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/title_add_recipe"
                android:textColor="@color/colorPrimary"
                android:minLines="1"
                android:maxLines="1"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <!-- Search recipe button -->
        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/activity_main_bottom_navigation_view_search_recipe"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/icon_search"
                app:tint="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/title_search"
                android:minLines="1"
                android:maxLines="1"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.constraint.ConstraintLayout>